# swagger-output.json
@@ -979,19 +979,13 @@
                 "sid": {
                   "example": "any"
                 },
-                "progress": {
+                "status": {
                   "example": "any"
                 },
                 "formid": {
                   "example": "any"
                 },
-                "startdate": {
-                  "example": "any"
-                },
-                "enddate": {
-                  "example": "any"
-                },
-                "additionalprice": {
+                "budget": {
                   "example": "any"
                 }
               }
@@ -1001,9 +995,6 @@
         "responses": {
           "201": {
             "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
@@ -1113,19 +1104,13 @@
                 "sid": {
                   "example": "any"
                 },
-                "progress": {
+                "status": {
                   "example": "any"
                 },
                 "formid": {
                   "example": "any"
                 },
-                "startdate": {
-                  "example": "any"
-                },
-                "enddate": {
-                  "example": "any"
-                },
-                "additionalprice": {
+                "budget": {
                   "example": "any"
                 }
               }
@@ -1135,9 +1120,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
@@ -1472,7 +1454,7 @@
       }
     },
     "/api/auth": {
-      "post": {
+      "get": {
         "tags": [
           "auth"
         ],
@@ -1518,10 +1500,7 @@
                 "sid": {
                   "example": "any"
                 },
-                "pay1": {
-                  "example": "any"
-                },
-                "pay2": {
+                "payment": {
                   "example": "any"
                 },
                 "jid": {
@@ -1540,9 +1519,6 @@
         "responses": {
           "201": {
             "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
@@ -1649,10 +1625,7 @@
                 "sid": {
                   "example": "any"
                 },
-                "pay1": {
-                  "example": "any"
-                },
-                "pay2": {
+                "payment": {
                   "example": "any"
                 },
                 "jid": {
@@ -1671,9 +1644,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
